welcome.lessons.welcome.bat.bool1.IcyHot.scala.error
icyHot:2: error: not found: value a
  if(a<0) {
     ^icyHot:3: error: not found: value b
    if(b<100) {
       ^icyHot:11: error: not found: value b
    if (b<0) {
        ^icyHot:12: error: not found: value a
      if(a<100) {
         ^icyHot:11: error: type mismatch;
 found   : Unit
 required: Boolean
    if (b<0) {
    ^