welcome.lessons.welcome.bat.bool1.IcyHot.scala.code
def icyHot(temp1:Int, temp2:Int):Boolean = {
  if(a<0) {
    if(b<100) {
      return true
    }
    else {
      return false
    }
  }
  else {
    if (b<0) {
      if(a<100) {
        return true
      }
      else {
        return false
      }
    }
  }
}